@@ -1,3 +1,7 @@
+2008-09-24 Andrea Neusiedl <andrea.neusiedl@cern.ch>
+	* Tag as TrigT1CaloMonitoring-00-03-22
+	* new requirements for RecExCommon
+	
 2008-09-10  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-03-21
         * Fix to requirements for checkreq warning
